test/fail/functionreturn.app
// Return statement missing in function

application test

section datamodel

globals {
  function getA(i : Int) : Int {
  }
}
